tests/valid/BoolAssign_Valid_1.whiley
void main([[char]] args):
    x = true
    println(str(x))
    x = false
    println(str(x))
