tests/invalid/VarDecl_CompileFail_4.whiley
void main([string] args):
    x = y
    print str(x)
